--- a/css/source/theme.scss
+++ b/css/source/theme.scss
@@ -55,3 +55,25 @@ $heading1TextShadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b
 
 // See ../../bower_components/reveal.js/css/theme/README.md
 // for further explanations on how reveal.js themes work.
+
+
+#transfect-img {
+  width: 50%;
+}
+
+#nuclease-img {
+  width: 50%;
+}
+#platform-diagram {
+  background: none;
+  box-shadow: none;
+  border: none;
+  margin: 0;
+}
+#composite {
+  border: none;
+  background: none;
+  box-shadow: none;
+}
+
+
